Fixed vertical overflow and position of popup for <a>++

--- a/src/content.css
+++ b/src/content.css
@@ -1,5 +1,5 @@
 .super_links_msg {
-  display: none;
+	display: none;
 	position: fixed;
 	border: 2px solid #000;
 	border-radius: 2px;
@@ -17,21 +17,21 @@
 
 .super_links_popup {
 	position: absolute;
-  display: none;
+	display: none;
 	border: 2px solid #000;
 	border-radius: 10px;
-	width: 755px;
-	height: 190px;
+	width: 705px;
+	height: 200px;
 	background: #fff;
 	color: black;
  	z-index: 2147483647;
-	padding: 32px 20px 20px 20px;
+	padding: 10px 10px 10px 10px;
 	font-family: Arial, Helvetica, sans-serif;
 }
 .super_links_popup-content {
-	width: 750px;
-	height: 200px;
-	overflow-y: auto;
+	width: 700px;
+	height: 180px;
+	overflow: auto;
 }
 
 
@@ -46,8 +46,8 @@ a.super_link_mark {
 	color: #FFFFFF;
 	line-height: 25px;
 	position: absolute;
-	top:4px;
-	right: 4px;
+	top:-15px;
+	right: -10px;
 	width: 24px;
 	text-align: center;
 	text-decoration: none;
